make sure link text can't wrap from icons

--- a/app/assets/stylesheets/jax/dev/controller_list.css.scss
+++ b/app/assets/stylesheets/jax/dev/controller_list.css.scss
@@ -30,6 +30,7 @@ ul#controller-list {
     padding-right: 15px;
 
     a.minify {
+      white-space: nowrap;
       font-weight: 400;
 
       .icon {
