--- a/app/assets/stylesheets/jax/dev/links-and-icons.css.scss
+++ b/app/assets/stylesheets/jax/dev/links-and-icons.css.scss
@@ -1,4 +1,5 @@
 a {
+  white-space: nowrap;
   display: inline-block;
   text-decoration: none;
   color: #ef8c08;
